fix: main overflow

--- a/common.css
+++ b/common.css
@@ -6,7 +6,6 @@ html {
 
 main {
   width: 100%;
-  overflow-y: visible;
 }
 
 body {
